[gd_scene load_steps=10 format=3 uid="uid://b1lnrprvmn0qm"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_gt33c"]
[ext_resource type="Texture2D" uid="uid://bcd52qm655j6k" path="res://Sprites/ECG_Grid.png" id="2_3hjck"]
[ext_resource type="PackedScene" uid="uid://dt2ux0q07y8h6" path="res://Prefabs/CRT Shader Effect.tscn" id="2_sho55"]
[ext_resource type="LabelSettings" uid="uid://cx0damq6eivxv" path="res://Fonts/Main Menu Font.tres" id="3_k15ek"]
[ext_resource type="Texture2D" uid="uid://cocq5f8xrioqr" path="res://Sprites/ECG_Obstacles.png" id="4_f5g52"]
[ext_resource type="LabelSettings" uid="uid://bo6b7fvr3cytl" path="res://Fonts/UI Font.tres" id="5_tklhc"]
[ext_resource type="AudioStream" uid="uid://b43mjlatskc3r" path="res://Sounds/Thunder.wav" id="7_80qm1"]

[sub_resource type="Animation" id="Animation_gujhc"]
resource_name = "MainMenu"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu Title/Heart:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-616, -8), Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu Title/Tracer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.01, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(856, 88), Vector2(192, 88)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LightningFlash:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.77, 1.88, 1.99),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Menu Title/Middle Line:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.88),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LightningFlash/Thunder:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pdoj3"]
_data = {
"MainMenu": SubResource("Animation_gujhc")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gt33c")

[node name="CRT Shader Effect" parent="." instance=ExtResource("2_sho55")]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="MenuAnimation" type="AnimationPlayer" parent="."]
autoplay = "MainMenu"
libraries = {
"": SubResource("AnimationLibrary_pdoj3")
}

[node name="BlackBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Grid" type="Sprite2D" parent="."]
modulate = Color(0.784314, 1, 1, 0.392157)
position = Vector2(640, 360)
texture = ExtResource("2_3hjck")

[node name="Menu Title" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.0
offset_top = 64.0
offset_right = -216.0
offset_bottom = 64.0
grow_horizontal = 2
pivot_offset = Vector2(216, 64)

[node name="Heart" type="Label" parent="Menu Title"]
layout_mode = 0
offset_left = -616.0
offset_top = -8.0
offset_right = -426.0
offset_bottom = 71.0
text = "Heart"
label_settings = ExtResource("3_k15ek")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Middle Line" type="Sprite2D" parent="Menu Title"]
visible = false
modulate = Color(1, 0.12549, 0.0862745, 1)
position = Vector2(216, 80)
rotation = 1.5708
scale = Vector2(0.5, 0.585671)
texture = ExtResource("4_f5g52")

[node name="Tracer" type="Label" parent="Menu Title"]
layout_mode = 0
offset_left = 856.0
offset_top = 88.0
offset_right = 1086.0
offset_bottom = 167.0
text = "Tracer"
label_settings = ExtResource("3_k15ek")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -240.0
grow_horizontal = 2
grow_vertical = 0
text = "Press Space to Start"
label_settings = ExtResource("5_tklhc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LightningFlash" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(1, 1, 1, 0)

[node name="Thunder" type="AudioStreamPlayer2D" parent="LightningFlash"]
stream = ExtResource("7_80qm1")

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="animation_finished" from="MenuAnimation" to="." method="_on_menu_animation_animation_finished"]
